fix label alignment

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -55,7 +55,8 @@ h2 {
 
 .tmdb-api-credits {
   display: flex;
-  margin-top: 50px;
+  justify-content: center;
+  margin: 50px 0 20px 0;
 }
 
 .tmdb-logo {
